[package]
name = "watch-watch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
